crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_enum_mut__unit_enum.snap
---
source: crates/kirin-derive-core/src/field/tests/test_enum_mut.rs
expression: generate(input)
---
impl<'a> ::kirin::ir::HasArgumentsMut<'a> for TestEnum {
    type Iter = TestEnumArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::Iter {
        match self {
            TestEnum::VariantA => TestEnumArgumentsMutIter::VariantA(std::iter::empty::<
                &'a mut ::kirin::ir::SSAValue,
            >()),
            TestEnum::VariantB => TestEnumArgumentsMutIter::VariantB(std::iter::empty::<
                &'a mut ::kirin::ir::SSAValue,
            >()),
        }
    }
}
pub enum TestEnumArgumentsMutIter<'a> {
    VariantA(std::iter::Empty<&'a mut ::kirin::ir::SSAValue>),
    VariantB(std::iter::Empty<&'a mut ::kirin::ir::SSAValue>),
}
impl<'a> Iterator for TestEnumArgumentsMutIter<'a> {
    type Item = &'a mut ::kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            TestEnumArgumentsMutIter::VariantA(iter) => iter.next(),
            TestEnumArgumentsMutIter::VariantB(iter) => iter.next(),
        }
    }
}
